# AoCS

./: README.md
Encryption/: CMakeLists.txt  container.cpp  container.h  encryptingKeyNumber.cpp  encryptingKeyNumber.h  encryptionKeyValue.cpp  encryptionKeyValue.h  main.cpp  periodicShift.cpp  periodicShift.h
Threads/: CMakeLists.txt  ReadMe.md  hotel.cpp  hotel.h  main.cpp  person.cpp  person.h  room.cpp  room.h
cpp/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  util.cpp  util.h
python_encryption/: constants.py  generator.py  main.py  tests3.txt  util.py
